Fix input overflow issue

--- a/style.css
+++ b/style.css
@@ -175,108 +175,6 @@ nav li:first-child {
     color:hsl(229, 31%, 21%);
 }
 
-/*.features {
-    margin-top: 30px;
-    margin-bottom: 80px;
-    padding: 20px;
-}
-
-.features-container1  h3{
-    padding-bottom: 20px;
-}
-
-.features-container1 {
-    padding-bottom: 35px;
-}
-
-.features-container2 p{
-    border-top: 1px solid gray;
-    border-bottom: 3px solid gray;
-    padding: 15px;
-}
-
-.features-container2 p:hover{
-    color: hsl(0, 94%, 66%);
-    cursor: pointer;
-}
-
-.features-container2 p:active{
-    border-bottom-color: hsl(0, 94%, 66%);
-    cursor: pointer
-}
-
-
-
-.bookmark {
-    margin-top: 30px;
-    margin-top: 50px;
-    padding: 20px;
-    display: none;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    transform: translateY(20px);
-    transition: opacity 0.5s ease-in-out, transform 0.5s ease-in-out;
-}
-
- .bookmark.active-content {
-    display: flex;
-    opacity: 1;
-    transform: translateY(0);
-}
-
-.bookmark-container1 img {
-    max-width: 100%;
-    height: auto;
-    display: block;
-}
-
-.bookmark-container1 {
-    position: relative;
-    display: inline-block;
-    z-index: 0;
-}
-
-.bookmark-container1::before {
-    content: "";
-    position: absolute;
-    bottom: -30px;
-    left: -50px;
-    width: 70%;
-    height: 70%;
-    background-color:  hsl(231, 69%, 60%);
-    border-bottom-right-radius: 120px;
-    z-index: -1;
-}
-
-
-.bookmark-container2 {
-    margin-bottom: 110px;
-}
-
-.bookmark-container2 h3 {
-    font-size: 24px;
-    padding-top: 100px;
-    padding-bottom: 30px;
-}
-
-.bookmark-btn {
-    background: hsl(231, 69%, 60%);
-    border: none;
-    padding: 13px 25px;
-    border-radius: 4px;
-    color: hsl(0, 0%, 97%);
-    font-weight: 500;
-    font-weight: 600;
-    margin-top: 30px;
-    width: 80%;
-}
-
- .features-container2 p.active-tab {
-    color: hsl(0, 94%, 66%);
-    border-bottom-color: hsl(0, 94%, 66%);
-    cursor: pointer;
-}*/
 
         
 .features {
@@ -619,6 +517,7 @@ footer {
     color: hsl(0, 0%, 97%);
     font-weight: 500;
     width: 100%;
+    max-width: 400px;
 }
 
 .footer-btn:active {
